plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  revisionHistoryLimit: 0  # Do not keep previous ReplicaSet
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true  # Enable host networking for UDP
      dnsPolicy: ClusterFirstWithHostNet  # Ensure DNS works correctly
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 8324
          name: plex-roku
        - containerPort: 32469
          name: plex-dlna
        - containerPort: 1900
          name: plex-upnp
          protocol: UDP
        - containerPort: 32410
          name: plex-gdm-1
          protocol: UDP
        - containerPort: 32412
          name: plex-gdm-2
          protocol: UDP
        - containerPort: 32413
          name: plex-gdm-3
          protocol: UDP
        - containerPort: 32414
          name: plex-gdm-4
          protocol: UDP
        volumeMounts:
          - mountPath: /plex/data
            name: plex-data
          - mountPath: /config
            name: plex-config                                  
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      volumes:
      - name: plex-data
        nfs:
          server: 10.10.0.31
          path: /mnt/ext1/k3s-data
      - name: plex-config
        nfs:
          server: 10.10.0.31
          path: /mnt/ext1/k3s-config
