plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plex
  namespace: media
spec:
  rules:
  - host: "plex.10.10.0.12.nip.io"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
  ingressClassName: nginx
